--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "react-router-dom": "^6.14.0",
     "socket.io": "^4.7.1"
   },
+  "engines": {
+    "node": ">=14.20.1"
+  },
   "devDependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.22.5"
   }
