--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5000
 JWT_SECRET=surajsehgal
-MONGO_URI=mongodb+srv://quickchat:quickChat@cluster0.rujmvtl.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://quick-chat1:quick-chat1@cluster0.ayyaar8.mongodb.net/?retryWrites=true&w=majority
 NODE_ENV=production
